--- a/fe/package.json
+++ b/fe/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "axios": "^1.2.0",
     "js-cookie": "^3.0.1",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "sass": "^1.56.1",
     "swr": "^1.3.0",
+    "yup": "^0.32.11",
     "zustand": "^4.1.4"
   },
   "devDependencies": {
