--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.2.0",
+    "dayjs": "^1.11.6",
     "js-cookie": "^3.0.1",
     "next": "13.0.5",
     "react": "18.2.0",
