--- a/fe/package.json
+++ b/fe/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/material": "^5.10.16",
     "axios": "^1.2.0",
     "dayjs": "^1.11.6",
     "js-cookie": "^3.0.1",
