--- a/fe/package.json
+++ b/fe/package.json
@@ -23,7 +23,9 @@
     "sass": "^1.56.1",
     "swr": "^1.3.0",
     "yup": "^0.32.11",
-    "zustand": "^4.1.4"
+    "zustand": "^4.1.4",
+    "chart.js": "^3.7.1",
+    "react-chartjs-2": "^4.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
